# ProtHash

./: README.md  data.py  export-model.ipynb  import-model.ipynb  loss.py  pyproject.toml  requirements.txt  test-compare.ipynb  test-compare.py  train.py
src/prot_hash/: model.py
src/prothash/: model.py
tests/: test_model.py
